--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			Bienvenue dans cet Examen sur GIT !
 		</div>
 		<img src="images/medal_bronze.png" alt="">
-		
+		<P>le deuxieme binome <span><h1>Djedjed vavoux ange</h1></span></P>
+		<p>je m'appelle Djedjed je suis adjoukrou bete age de 20ans</p>
 	</body>
 </html>
