Deuxieme-commit-Samuel

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
 		<img src="images/medal_bronze.png" alt="">
 		<P>le deuxieme binome <span><h1>Djedjed vavoux ange</h1></span></P>
 		<p>je m'appelle Djedjed je suis adjoukrou bete age de 20ans</p>
+		<p>Le premier binome est <span>KOUAT Samuel</span></p>
+		<ul>
+			<li>J'ai 19 ans </li>
+			<li>Je suis ivoirien</li>
+			<li>Je suis étudiant</li>
+		</ul>
 	</body>
 </html>
