--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 			<li>Je suis ivoirien</li>
 			<li>Je suis étudiant</li>
 		</ul>
+		<img src="images/medal_silver.png" alt="">
 	</body>
 </html>
