derniere_modification_ange

--- a/index.html
+++ b/index.html
@@ -27,5 +27,17 @@
 		</ul>
 
 		<img src="images/medal_silver.png" alt="">
+		<img src="images/medal_gold.png" alt="" srcset="">
+		<span><h2>nos competences :</h2></span>
+		<ul>
+			<li>html&CSS</li>
+			<li>grid&flexboss</li>
+			<li>GIT</li>
+		</ul>
+		<br>
+		<ul>
+			<li>premier :Samuel</li>
+			<li>Deuxieme : Djedjed</li>
+		</ul>
 	</body>
 </html>
