--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 			<li>premier :Samuel</li>
 			<li>Deuxieme : Djedjed</li>
 		</ul>
+		<p>Nous somme les meilleurs d'IFRAN</p>
 	</body>
 </html>
